# ezlog

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  add-class.bat  add-class.sh  build-aarch64.sh  build-android.sh  build-ios.sh  build-linux.sh  build-win32.bat  build-win64.bat  dev.bat  format-all.bat  test_ezlog.bat  test_ezlog.sh
benchmark/: CMakeLists.txt  file_system.cpp  file_system.h  main.cpp  path.cpp  path.h
cmake/: utils.cmake
example/: CMakeLists.txt  main.cpp
include/: ezlog.h  ezlog_config.h.in
pyscripts/: convert-to-utf8.py  generate-cpp-class.py
src/: CMakeLists.txt  VersionInfo.rc.in  async_logger.cpp  async_logger.h  atomic.h  basic_logger.cpp  basic_logger.h  destination.cpp  destination.h  exports.def  exports.map  ezlog.cpp  ezlog_buffer.cpp  ezlog_buffer.h  ezlog_event.cpp  ezlog_event.h  ezlog_lock.cpp  ezlog_lock.h  ezlog_platform_compatibility.h  ezlog_scoped_lock.cpp  ezlog_scoped_lock.h  ezlog_stream.cpp  ezlog_stream.h  ezlog_utils.cpp  ezlog_utils.h  file_system.cpp  file_system.h  format.cpp  format.h  logger.cpp  logger.h  logger_config.cpp  logger_config.h  macros.h  path.cpp  path.h  pch.h  platform_compatibility.cpp  platform_compatibility.h  private_type_definitions.h  (+6 more)
src/asn.1/: bit_string.cpp  bit_string.h  integer.h  object.h  sequence.cpp  sequence.h  utf8_string.cpp  utf8_string.h
test/: CMakeLists.txt  argument_parser.cpp  argument_parser.h  main.cpp
toolchains/: aarch64.toolchain.cmake
