PROJECT(ezlog_benchmark_test)

FILE(GLOB_RECURSE INCLUDE_FILES
    ${PROJECT_SOURCE_DIR}/*.h
    ${PROJECT_SOURCE_DIR}/*.hpp
)

FILE(GLOB_RECURSE SOURCE_FILES 
    ${PROJECT_SOURCE_DIR}/*.c
    ${PROJECT_SOURCE_DIR}/*.cpp
)
    
SOURCE_GROUP("Header Files" FILES "${INCLUDE_FILES}")
SOURCE_GROUP("Source Files" FILES "${SOURCE_FILES}")

ADD_EXECUTABLE(
    ${PROJECT_NAME}
    ${INCLUDE_FILES}
    ${SOURCE_FILES}
)

SET(EX_LINK_LIBRARIES )
IF(MSVC)
    LIST(APPEND EX_LINK_LIBRARIES shlwapi)
ELSE()
    LIST(APPEND EX_LINK_LIBRARIES pthread)
ENDIF() # ENDIF MSVC

IF(benchmark_FOUND)
    LIST(APPEND EX_LINK_LIBRARIES benchmark::benchmark)
ENDIF() # ENDIF benchmark_FOUND

TARGET_LINK_LIBRARIES(
    ${PROJECT_NAME}
    ${EX_LINK_LIBRARIES}
    ezlog
)

INSTALL(
    TARGETS ezlog_benchmark_test
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)